[gd_scene load_steps=35 format=2]

[ext_resource path="res://kart/Gordon.tscn" type="PackedScene" id=1]
[ext_resource path="res://kart/Kart.gd" type="Script" id=2]
[ext_resource path="res://materials/Grey.material" type="Material" id=3]
[ext_resource path="res://materials/Red.material" type="Material" id=4]
[ext_resource path="res://kart/RearWheelMesh.tres" type="CylinderMesh" id=5]
[ext_resource path="res://kart/FrontWheelMesh.tres" type="CylinderMesh" id=6]
[ext_resource path="res://kart/engine_loop_cc0.wav" type="AudioStream" id=7]
[ext_resource path="res://kart/jump.wav" type="AudioStream" id=9]
[ext_resource path="res://kart/dead.ogg" type="AudioStream" id=12]
[ext_resource path="res://kart/steering-wheel.png" type="Texture" id=13]
[ext_resource path="res://materials/White.material" type="Material" id=14]
[ext_resource path="res://kart/control-panel.png" type="Texture" id=15]
[ext_resource path="res://kart/Smoke.tres" type="Material" id=16]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.35, 0.6, 0.9 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.6, 0.2, 1 )

[sub_resource type="CubeMesh" id=3]
material = ExtResource( 14 )
size = Vector3( 0.7, 0.6, 0.5 )

[sub_resource type="CylinderMesh" id=4]
material = ExtResource( 3 )
top_radius = 0.1
bottom_radius = 0.15
height = 0.2
radial_segments = 5

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true

[sub_resource type="QuadMesh" id=6]
material = SubResource( 5 )
size = Vector2( 0.2, 0.2 )

[sub_resource type="CubeMesh" id=7]
size = Vector3( 0.7, 0.8, 0.4 )

[sub_resource type="CylinderMesh" id=8]
top_radius = 0.1
bottom_radius = 0.05
height = 0.2
radial_segments = 5
rings = 1

[sub_resource type="CylinderMesh" id=9]
material = ExtResource( 3 )
top_radius = 0.15
bottom_radius = 0.1
height = 0.3
radial_segments = 7
rings = 1

[sub_resource type="SpatialMaterial" id=10]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_specular_mode = 4
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="SphereMesh" id=11]
material = SubResource( 10 )
radius = 0.2
height = 0.4
radial_segments = 4
rings = 3

[sub_resource type="Animation" id=12]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LeftBlinker:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightBlinker:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LeftBlinker:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightBlinker:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LeftBlinker:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightBlinker:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LeftBlinker:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightBlinker:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="SpatialMaterial" id=16]
flags_unshaded = true
albedo_color = Color( 1, 0.72549, 0, 1 )

[sub_resource type="QuadMesh" id=17]
material = SubResource( 16 )
size = Vector2( 0.2, 0.1 )

[sub_resource type="SpatialMaterial" id=18]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="QuadMesh" id=19]
material = SubResource( 18 )
size = Vector2( 0.25, 0.08 )

[sub_resource type="Animation" id=20]
tracks/0/type = "value"
tracks/0/path = NodePath("Vehicle/Gordon/LeftArm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 8.809, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Vehicle/Gordon/RightArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 8.809, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Vehicle/Gordon/LeftArm:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.2, 0.432, -0.031 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Vehicle/Gordon/RightArm:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.2, 0.432, -0.031 ) ]
}

[sub_resource type="Animation" id=21]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Vehicle/Gordon/LeftArm:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 8.809, 0, 0 ), Vector3( 8.809, 90, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Vehicle/Gordon/RightArm:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 8.809, 0, 0 ), Vector3( 8.809, -90, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Vehicle/Gordon/LeftArm:translation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.2, 0.432, -0.031 ), Vector3( -0.5, 0.432, 0.2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Vehicle/Gordon/RightArm:translation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.2, 0.432, -0.031 ), Vector3( 0.5, 0.432, 0.2 ) ]
}

[node name="Kart" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )
shape = SubResource( 1 )

[node name="Vehicle" type="Spatial" parent="."]

[node name="RightFrontWheel" type="MeshInstance" parent="Vehicle"]
transform = Transform( -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0, 1, 0.5, -1.49012e-08, -0.6 )
mesh = ExtResource( 6 )
material/0 = null

[node name="LeftFrontWheel" type="MeshInstance" parent="Vehicle"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.5, -1.49012e-08, -0.6 )
mesh = ExtResource( 6 )
material/0 = null

[node name="RightRearWheel" type="MeshInstance" parent="Vehicle"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.5, 0.1, 0.6 )
mesh = ExtResource( 5 )
material/0 = null

[node name="LeftRearWheel" type="MeshInstance" parent="Vehicle"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.5, 0.1, 0.6 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Chassis" type="MeshInstance" parent="Vehicle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.49012e-08, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="FrontChassis" type="MeshInstance" parent="Vehicle"]
transform = Transform( 1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0.3, -0.7 )
mesh = SubResource( 3 )
material/0 = null

[node name="SteeringWheel" type="Sprite3D" parent="Vehicle/FrontChassis"]
transform = Transform( 1, 0, 0, 0, 0.660408, 0.750906, 0, -0.750906, 0.660408, 0, 0.333109, 0.226329 )
cast_shadow = 0
pixel_size = 0.03
shaded = true
texture = ExtResource( 13 )

[node name="LeftHeadLight" type="MeshInstance" parent="Vehicle/FrontChassis"]
transform = Transform( 1, 0, 0, 0, 0.258819, -0.965925, 0, 0.965925, 0.258819, -0.3, -0.1, -0.25 )
mesh = SubResource( 4 )
material/0 = null

[node name="Light" type="SpotLight" parent="Vehicle/FrontChassis/LeftHeadLight"]
transform = Transform( 0.965926, 1.49101e-08, 0.258819, -0.25, -0.258819, 0.933013, 0.0669873, -0.965927, -0.25, 0, -0.2, -5.96046e-08 )
layers = 12
light_color = Color( 0.992157, 0.901961, 0.313726, 1 )
light_cull_mask = 4294967277
spot_range = 40.0
spot_angle = 25.0

[node name="LightSource" type="MeshInstance" parent="Vehicle/FrontChassis/LeftHeadLight"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -0.11, 0 )
layers = 12
mesh = SubResource( 6 )
material/0 = null

[node name="RightHeadLight" type="MeshInstance" parent="Vehicle/FrontChassis"]
transform = Transform( 1, 0, 0, 0, 0.258819, -0.965925, 0, 0.965925, 0.258819, 0.3, -0.1, -0.25 )
mesh = SubResource( 4 )
material/0 = null

[node name="Light" type="SpotLight" parent="Vehicle/FrontChassis/RightHeadLight"]
transform = Transform( 0.965926, -7.71341e-09, -0.258819, 0.25, -0.258819, 0.933013, -0.0669874, -0.965927, -0.25, 0, -0.2, -1.19209e-07 )
layers = 12
light_color = Color( 0.992157, 0.901961, 0.313726, 1 )
light_cull_mask = 4294967277
spot_range = 40.0
spot_angle = 25.0

[node name="LightSource" type="MeshInstance" parent="Vehicle/FrontChassis/RightHeadLight"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -0.11, 0 )
layers = 12
mesh = SubResource( 6 )
material/0 = null

[node name="ControlPanel" type="Sprite3D" parent="Vehicle/FrontChassis"]
transform = Transform( 1, 0, 0, 0, -5.96046e-08, 0.999999, 0, -0.999999, -5.96046e-08, 0, 0.32, 0 )
layers = 12
cast_shadow = 0
pixel_size = 0.03
texture = ExtResource( 15 )

[node name="BackChassis" type="MeshInstance" parent="Vehicle"]
transform = Transform( 1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0.4, 0.6 )
mesh = SubResource( 7 )
material/0 = ExtResource( 4 )

[node name="SmallRightBell" type="MeshInstance" parent="Vehicle/BackChassis"]
transform = Transform( 1, 0, 0, 0, 0.5, -0.866025, 0, 0.866025, 0.5, 0.15, 0.2, 0.25 )
mesh = SubResource( 8 )
material/0 = ExtResource( 3 )

[node name="SmallLeftBell" type="MeshInstance" parent="Vehicle/BackChassis"]
transform = Transform( 1, 0, 0, 0, 0.5, -0.866025, 0, 0.866025, 0.5, -0.15, 0.2, 0.25 )
mesh = SubResource( 8 )
material/0 = ExtResource( 3 )

[node name="BigLeftBell" type="MeshInstance" parent="Vehicle/BackChassis"]
transform = Transform( 1, 0, 0, 0, 0.5, -0.866025, 0, 0.866025, 0.5, -0.25, -0.05, 0.3 )
mesh = SubResource( 9 )
material/0 = null

[node name="Boost" type="Particles" parent="Vehicle/BackChassis/BigLeftBell"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
emitting = false
amount = 20
lifetime = 0.25
visibility_aabb = AABB( -1, -1, -1, 2, 2, 2 )
local_coords = false
process_material = ExtResource( 16 )
draw_pass_1 = SubResource( 11 )

[node name="BigRightBell" type="MeshInstance" parent="Vehicle/BackChassis"]
transform = Transform( 1, 0, 0, 0, 0.5, -0.866025, 0, 0.866025, 0.5, 0.25, -0.05, 0.3 )
mesh = SubResource( 9 )
material/0 = null

[node name="Boost" type="Particles" parent="Vehicle/BackChassis/BigRightBell"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
emitting = false
amount = 20
lifetime = 0.25
visibility_aabb = AABB( -1, -1, -1, 2, 2, 2 )
local_coords = false
process_material = ExtResource( 16 )
draw_pass_1 = SubResource( 11 )

[node name="Blinkers" type="AnimationPlayer" parent="Vehicle/BackChassis"]
autoplay = "off"
anims/off = SubResource( 12 )
anims/on = SubResource( 13 )
anims/turn_left = SubResource( 14 )
anims/turn_right = SubResource( 15 )

[node name="LeftBlinker" type="MeshInstance" parent="Vehicle/BackChassis"]
transform = Transform( 1, 0, 0, 0, 0.965925, 0.258819, 0, -0.258819, 0.965925, -0.2, 0.4, 0.25 )
mesh = SubResource( 17 )
material/0 = null

[node name="RightBlinker" type="MeshInstance" parent="Vehicle/BackChassis"]
transform = Transform( 1, 0, 0, 0, 0.965925, 0.258819, 0, -0.258819, 0.965925, 0.2, 0.4, 0.25 )
mesh = SubResource( 17 )
material/0 = null

[node name="LeftRearLight" type="MeshInstance" parent="Vehicle/BackChassis"]
transform = Transform( 1, 0, 0, 0, 0.965925, 0.258819, 0, -0.258819, 0.965925, -0.2, 0.4, 0.22 )
layers = 12
mesh = SubResource( 19 )
material/0 = null

[node name="RightRearLight" type="MeshInstance" parent="Vehicle/BackChassis"]
transform = Transform( 1, 0, 0, 0, 0.965925, 0.258819, 0, -0.258819, 0.965925, 0.2, 0.4, 0.22 )
layers = 12
mesh = SubResource( 19 )
material/0 = null

[node name="Gordon" parent="Vehicle" instance=ExtResource( 1 )]

[node name="RearLight" type="SpotLight" parent="Vehicle"]
transform = Transform( 1, 0, 0, 0, -0.965926, 0.258819, 0, -0.258819, -0.965926, 0, 0.5, 1 )
layers = 12
light_color = Color( 1, 0, 0, 1 )
light_energy = 2.0
light_cull_mask = 4294967277
spot_range = 4.0
spot_angle = 60.0

[node name="PanelLight" type="OmniLight" parent="Vehicle"]
transform = Transform( 1, 0, 0, 0, 1, -2.98023e-08, 0, 2.98023e-08, 1, 0, 0.723874, -0.353929 )
layers = 12
light_color = Color( 1, 0.701961, 0, 1 )
light_cull_mask = 4294967277
omni_range = 1.0

[node name="Engine" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 1 )
stream = ExtResource( 7 )
max_db = 0.0
autoplay = true
bus = "Sfx"

[node name="Jump" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
bus = "Sfx"

[node name="Dead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -3.0
bus = "Sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 20 )
anims/win = SubResource( 21 )

[node name="AirborneTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="AirborneTimer" to="." method="_on_AirborneTimer_timeout"]
